--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 VITE_APPWRITE_URL="TEST ENVIROMENT"
+VITE_APPWRITE_PROJECT_ID=""
+
+VITE_APPWRITE_DATABASE_ID=""
+VITE_APPWRITE_COLLECTION_ID=""
+VITE_APPWRITE_BUCKET_ID=""
+
+
