--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-VITE_APPWRITE_URL="TEST ENVIROMENT"
-VITE_APPWRITE_PROJECT_ID=""
+VITE_APPWRITE_URL="https://cloud.appwrite.io/v1"
+VITE_APPWRITE_PROJECT_ID="677f33380011293322b6"
 
-VITE_APPWRITE_DATABASE_ID=""
-VITE_APPWRITE_COLLECTION_ID=""
-VITE_APPWRITE_BUCKET_ID=""
+VITE_APPWRITE_DATABASE_ID="677f34470004451ad3c4"
+VITE_APPWRITE_COLLECTION_ID="677f3485003628c3835f"
+VITE_APPWRITE_BUCKET_ID="677f361b0010f689bd93"
 
